--- a/css/style.scss
+++ b/css/style.scss
@@ -322,6 +322,51 @@ $white: #ffffff;
     @extend %section-padding;
 }
 
+.owl-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-top: 30px;
+    position: relative;
+}
+
+.owl-nav:before {
+    content: "";
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid #c2c2c2;
+    left: 0px;
+    right: 0px;
+    margin: 0 auto;
+    position: absolute;
+    top: -16px;
+}
+
+.owl-nav .owl-prev,
+.owl-nav .owl-next {
+    background: url("../images/arrow.png") no-repeat center;
+    width: 44px;
+    height: 21px;
+    text-indent: -99999px;
+}
+
+.owl-nav .owl-prev {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+    margin-right: 15px;
+}
+
+.owl-nav .owl-next {
+    margin-left: 15px;
+}
+
 
 // -------------Media Queries ------------
 
