--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ h6 {
 
 p {
   font-size: 24px;
+  color: #7d7d7d;
 }
 
 ul {
@@ -78,12 +79,12 @@ input[type=number] {
   -webkit-appearance: textfield;
 }
 
-.insights, .feature-blog, .recent-post, .newsletter, .other-blogs {
+.insights, .feature-blog, .newsletter, .other-blogs {
   padding: 5rem 0;
 }
 
 @media (max-width: 1440px) {
-  .insights, .feature-blog, .recent-post, .newsletter, .other-blogs {
+  .insights, .feature-blog, .newsletter, .other-blogs {
     padding: 3rem 0;
   }
 }
@@ -176,7 +177,8 @@ input[type=number] {
   font-weight: bold;
 }
 
-.insights .digital-insights h6 {
+.insights .digital-insights p {
+  font-size: 16px;
   font-weight: normal;
 }
 
@@ -185,6 +187,12 @@ input[type=number] {
   width: 100%;
   background-color: #f4f4f4;
   border-radius: 6px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .search-blog .search-blog-input {
@@ -225,7 +233,7 @@ input[type=number] {
   right: 0px;
   bottom: 0px;
   color: #ffffff;
-  font-size: 16px;
+  font-size: 24px;
   font-weight: bold;
   border: 1px solid #c10000;
   border-radius: 6px;
@@ -255,6 +263,25 @@ input[type=number] {
   color: #c10000;
   font-weight: bold;
   text-align: center;
+}
+
+.recent-post .owl-carousel {
+  margin-top: 30px;
+  overflow: hidden;
+}
+
+.recent-post .post-card {
+  padding: 10px 20px;
+  margin-top: 30px;
+}
+
+.recent-post .post-card .post-img-container {
+  margin-top: -30px;
+  background-color: #ffffff;
+}
+
+.recent-post .post-card h6 {
+  margin-top: 1rem;
 }
 
 .newsletter fieldset {
@@ -306,6 +333,45 @@ input[type=number] {
   width: 40px;
 }
 
+.other-blogs .blog-img-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.other-blogs .blog-img-container .blog-img-desc {
+  position: absolute;
+  height: inherit;
+  width: inherit;
+  top: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.301)), to(#0c0c0d));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.301), #0c0c0d);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  color: #ffffff;
+  padding: 20px;
+}
+
+.other-blogs .other-blogs-list li {
+  margin-bottom: 30px;
+}
+
+.other-blogs .other-blogs-list li p {
+  margin-bottom: 0;
+}
+
 .owl-nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -316,8 +382,9 @@ input[type=number] {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 3rem;
   position: relative;
+  margin-bottom: 1rem;
 }
 
 .owl-nav:before {
@@ -364,6 +431,25 @@ input[type=number] {
   p {
     font-size: 14px;
   }
+  .search-blog {
+    height: 3rem;
+  }
+  .search-blog .search-blog-input::-webkit-input-placeholder,
+  .search-blog .search-blog-submit {
+    font-size: 16px;
+  }
+  .search-blog .search-blog-input:-ms-input-placeholder,
+  .search-blog .search-blog-submit {
+    font-size: 16px;
+  }
+  .search-blog .search-blog-input::-ms-input-placeholder,
+  .search-blog .search-blog-submit {
+    font-size: 16px;
+  }
+  .search-blog .search-blog-input::placeholder,
+  .search-blog .search-blog-submit {
+    font-size: 16px;
+  }
   .newsletter fieldset legend {
     font-size: 25px !important;
   }
@@ -372,7 +458,26 @@ input[type=number] {
   }
 }
 
+@media (max-width: 991.91px) {
+  .feature-blog .feature-blog-img > img {
+    margin-left: auto;
+    margin-top: 0;
+  }
+  .newsletter .follow-us {
+    margin-top: 2.5rem;
+  }
+  .newsletter fieldset .search-blog {
+    width: 100%;
+  }
+  .newsletter .follow-us > h3 {
+    margin-bottom: 1rem;
+  }
+}
+
 @media only screen and (max-width: 480px) {
+  h1 {
+    font-size: 40px;
+  }
   .read-more {
     font-size: 13px;
     margin-top: 0rem;
